package com.diguage.didp.decorator;

/**
 * Component 类
 *
 * @author diguage
 * @since 2017-05-16
 */
public abstract class Component {
  public abstract void operation();
}
class  Component
