package com.diguage.didp.decorator;

/**
 * @author diguage
 * @since 2017-05-16
 */
public class ConcreteComponent extends Component {
  public void operation() {
    System.out.println("具体对象的操作");
  }
}
